--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,6 @@
-<html>
+<!DOCTYPE html>
+
+<html lang="en">
   <head>
     <title>login page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,10 +11,11 @@
       <h1>Please login</h1>
       <br>
       <form action="#" method="post">
-        <input type="text" placeholder="Username" name="username" value="{{request.form.username }}">
-         <input type="password" placeholder="Password" name="password" value="{{request.form.password }}">
+        <input type="text" placeholder="Username" name="username" value="{{request.form.username}}">
+         <input type="password" placeholder="Password" name="password" value="{{request.form.password}}">
         <input class="btn btn-default" type="submit" value="Login">
       </form>
+      <a href="/register">Already have an account? Login here!</a>
       {% if error %}
         <p class="error"><strong>Error:</strong> {{ error }}
       {% endif %}
