--- a/templates/login.html
+++ b/templates/login.html
@@ -1,24 +1,37 @@
 <!DOCTYPE html>
-
 <html lang="en">
-  <head>
-    <title>login page</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="static/bootstrap.min.css" rel="stylesheet" media="screen">
-  </head>
-  <body>
-    <div class="container">
-      <h1>Please login</h1>
-      <br>
-      <form action="#" method="post">
-        <input type="text" placeholder="Username" name="username" value="{{request.form.username}}">
-         <input type="password" placeholder="Password" name="password" value="{{request.form.password}}">
-        <input class="btn btn-default" type="submit" value="Login">
-      </form>
-      <a href="/register">Already have an account? Login here!</a>
-      {% if error %}
-        <p class="error"><strong>Error:</strong> {{ error }}
-      {% endif %}
-    </div>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <title>Login</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+</head>
+<body class="container-sm">
+  <div class="align-items-center">
+    {% with messages = get_flashed_messages() %}
+      {% for message in messages %}
+          <div class="alert alert-danger">
+              <strong>Warning: {{ message }}</strong>
+          </div>
+      {% endfor %}
+    {% endwith %}
+    <h1 class="display-3 text-center" >Welcome to COVIDB!</h1>
+    <form action="{{ url_for('login') }}" method="post">
+      <div class="form-group-sm">
+        <label for="email">Email address</label>
+        <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp">
+      </div>
+      <div class="form-group-sm">
+        <label for="password">Password</label>
+        <input type="password" class="form-control" name="pass" id="password">
+      </div>
+        {% block log_reg_dif %}
+            <a href="{{ url_for('register') }}">Don't have an account? Register here!</a>
+        {% endblock %}
+      <div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </div>
+
+    </form>
+  </div>
+</body>
 </html>
