--- a/MP_reviewer/templates/layout.html
+++ b/MP_reviewer/templates/layout.html
@@ -12,11 +12,12 @@
     {% block title %}<title>Welcome</title>{% endblock %}
   </head>
   <body>
+  <noscript>
+      You need JavaScript to run this application, please enable Javascript or go to a supported browser
+  </noscript>
     {% block body %}{% endblock %}
-    {% block bootscript %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous">
     </script>
-    {% endblock %}
   </body>
 </html>
